// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image props should render with prop alt 1`] = `
<div
  class="relative image"
>
  <div
    class="absolute top-0 left-0 w-full h-full"
    style="background-color: rgb(43, 138, 198);"
  />
  <!--v-if-->
</div>
`;

exports[`Image props should render with prop color 1`] = `
<div
  class="relative image"
>
  <div
    class="absolute top-0 left-0 w-full h-full"
    style="background-color: rgb(255, 255, 255);"
  />
  <!--v-if-->
</div>
`;

exports[`Image props should render with prop url 1`] = `
<div
  class="relative image"
>
  <div
    class="absolute top-0 left-0 w-full h-full"
    style="background-color: rgb(43, 138, 198);"
  />
  <img
    class="max-h-full w-auto"
    src="http://foo.bar"
    style="height: 0px;"
  />
</div>
`;

exports[`Image props should render without props 1`] = `
<div
  class="relative image"
>
  <div
    class="absolute top-0 left-0 w-full h-full"
    style="background-color: rgb(43, 138, 198);"
  />
  <!--v-if-->
</div>
`;
